- Updated header flex box justity-content to space-between to avoid flex box randomly   shift to left side on smaller screens - Updated paragraph alignment to left - Changing color of launch button on hover - Made sure there are no magins/paddings on responsive views to get perfect view

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -20,7 +20,7 @@ h1 {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: -0.05rem;
-  text-align: justify;
+  text-align: left;
   margin: 0;
 }
 
@@ -32,7 +32,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 2rem;
   text-align: center;
 }
