--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,8 @@
 body {
   background-color: black;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
